--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -47,12 +47,11 @@
   <ItemGroup>
     <Compile Include="Dtos\ProductDto.cs" />
     <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\Product.cs" />
+    <Compile Include="Entities\Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
