Added Product Repository

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IProductRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
   </ItemGroup>
   <ItemGroup />
